--- a/.github/workflows/node-js.yml
+++ b/.github/workflows/node-js.yml
@@ -1,114 +1,94 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+name: Build and Deploy React v16.14.1 App to EC2 Tomcat 10.1.41
 
-name: Build and Deploy the React version 16.14.1 app on EC2's Tomcat 10.1.41
 on:
   push:
     branches: [main]
+
 jobs:
   build-deploy:
     runs-on: self-hosted
     strategy:
       matrix:
         node-version: [16.8]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    # Setup Node.js version 16.8
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-      #env:
-        #CI: true   
-        
-    # Change the react-scripts file with executable rights
-    - name: Change the react-scripts file with executable rights
-      env:
-        EC2_HOST: ${{ secrets.EC2_HOST }}
-        EC2_USER: ${{ secrets.EC2_USER }}
-        EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}         
-      run: |
-       #Applying executable rights on react-scripts file
-       set -e
-       chmod +x ~/QuaLISWeb-Runner/actions-runner/QuaLISWeb-Work/QuaLISWeb/QuaLISWeb/node_modules/.bin/react-scripts
+      - uses: actions/checkout@v3
 
-    # Build the React app (no npm ci since node_modules is included)
-    - name: Build React app            
-      run: |
-            set -e
-            npm run build
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    # Check, delete, and create QuaLISWeb directory in Tomcat webapps
-    - name: Manage QuaLISWeb directory
-      env:
-        EC2_HOST: ${{ secrets.EC2_HOST }}
-        EC2_USER: ${{ secrets.EC2_USER }}
-        EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-        TOMCAT_WEBAPPS_PATH: ${{ secrets.TOMCAT_WEBAPPS_PATH }}
-      run: |
-        # Create a temporary file for the SSH key
-        echo "$EC2_SSH_KEY" > ssh_key.pem
-        chmod 600 ssh_key.pem
+      - name: Show environment info
+        run: |
+          echo "Node Version: $(node -v)"
+          echo "NPM Version: $(npm -v)"
+          echo "Disk Space:"
+          df -h
+          echo "Memory:"
+          free -m
 
-        # SSH into EC2 and manage the QuaLISWeb directory
-        ssh -i ssh_key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
-        
-        # Define the target directory
-          TARGET_DIR="$TOMCAT_WEBAPPS_PATH/QuaLISWeb"
+      - name: Give executable rights to react-scripts (if needed)
+        run: chmod +x node_modules/.bin/react-scripts || true
 
-        # Check if the directory exists
-          if [ -d "$TARGET_DIR" ]; then
-            echo "Directory $TARGET_DIR exists. Deleting it..."
-            rm -rf "$TARGET_DIR"
+      - name: Build React App and Capture Logs
+        run: |
+          echo "Starting React build..."
+          CI=false npm run build 2>&1 | tee build.log
+        continue-on-error: true
+
+      - name: Check for Build Failures
+        run: |
+          if grep -q "Failed to compile" build.log || grep -q "Error:" build.log; then
+            echo "❌ Build failed. Check the log above for details."
+            exit 1
           else
-            echo "Directory $TARGET_DIR does not exist."
+            echo "✅ Build completed successfully."
           fi
 
-          # Create the new QuaLISWeb directory
-          echo "Creating new directory $TARGET_DIR..."
-          mkdir -p "$TARGET_DIR"
+      - name: Prepare SSH Key for EC2
+        env:
+          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
+        run: |
+          echo "$EC2_SSH_KEY" > ssh_key.pem
+          chmod 600 ssh_key.pem
 
-          # Set appropriate permissions for Tomcat
-          chmod -R 755 "$TARGET_DIR"
-          chown -R $EC2_USER:$EC2_USER "$TARGET_DIR"
-        EOF
+      - name: Manage QuaLISWeb Directory on EC2
+        env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_USER: ${{ secrets.EC2_USER }}
+          TOMCAT_WEBAPPS_PATH: ${{ secrets.TOMCAT_WEBAPPS_PATH }}
+        run: |
+          ssh -i ssh_key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
+            TARGET_DIR="$TOMCAT_WEBAPPS_PATH/QuaLISWeb"
 
-        # Clean up
-        rm ssh_key.pem
-      
-   # Deploy to EC2 Tomcat
-    - name: Deploy to EC2 Tomcat
-      env:
-        EC2_HOST: ${{ secrets.EC2_HOST }}
-        EC2_USER: ${{ secrets.EC2_USER }}
-        EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-        TOMCAT_WEBAPPS_PATH: ${{ secrets.TOMCAT_WEBAPPS_PATH }}
-      run: |
-        # Create a temporary file for the SSH key
-        echo "$EC2_SSH_KEY" > ssh_key.pem
-        chmod 600 ssh_key.pem
+            if [ -d "$TARGET_DIR" ]; then
+              echo "Directory $TARGET_DIR exists. Deleting it..."
+              rm -rf "$TARGET_DIR"
+            else
+              echo "Directory $TARGET_DIR does not exist."
+            fi
 
-        # Copy build files to Tomcat webapps directory (e.g., /opt/tomcat/webapps/ROOT)
-        rsync -avz --delete -e "ssh -i ssh_key.pem -o StrictHostKeyChecking=no" ./build/ $EC2_USER@$EC2_HOST:$TOMCAT_WEBAPPS_PATH/QuaLISWeb/
+            echo "Creating new directory $TARGET_DIR..."
+            mkdir -p "$TARGET_DIR"
+            chmod -R 755 "$TARGET_DIR"
+            chown -R $USER:$USER "$TARGET_DIR"
+          EOF
 
-        # Clean up
-        rm ssh_key.pem
+      - name: Deploy React App to EC2 Tomcat
+        env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_USER: ${{ secrets.EC2_USER }}
+          TOMCAT_WEBAPPS_PATH: ${{ secrets.TOMCAT_WEBAPPS_PATH }}
+        run: |
+          rsync -avz --delete -e "ssh -i ssh_key.pem -o StrictHostKeyChecking=no" ./build/ $EC2_USER@$EC2_HOST:$TOMCAT_WEBAPPS_PATH/QuaLISWeb/
 
-    # Restart Tomcat
-    - name: Restart Tomcat
-      env:
-        EC2_HOST: ${{ secrets.EC2_HOST }}
-        EC2_USER: ${{ secrets.EC2_USER }}
-        EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-      run: |
-        # Recreate SSH key file
-        echo "$EC2_SSH_KEY" > ssh_key.pem
-        chmod 600 ssh_key.pem
+      - name: Restart Tomcat on EC2
+        env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_USER: ${{ secrets.EC2_USER }}
+        run: |
+          ssh -i ssh_key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST "sudo systemctl restart tomcat"
 
-        # Restart Tomcat service
-        ssh -i ssh_key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST "sudo systemctl restart tomcat"
-
-        # Clean up
-        rm ssh_key.pem
+      - name: Cleanup SSH Key
+        run: rm -f ssh_key.pem
