--- a/.github/workflows/node-js.yml
+++ b/.github/workflows/node-js.yml
@@ -59,12 +59,15 @@ jobs:
           EC2_USER: ${{ secrets.EC2_USER }}
           TOMCAT_WEBAPPS_PATH: ${{ secrets.TOMCAT_WEBAPPS_PATH }}
         run: |
+          echo "EC2_USER=$EC2_USER"
+          echo "EC2_HOST=$EC2_HOST"
+         
           ssh -i ssh_key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
             TARGET_DIR="$TOMCAT_WEBAPPS_PATH/QuaLISWeb"
 
             if [ -d "$TARGET_DIR" ]; then
               echo "Directory $TARGET_DIR exists. Deleting it..."
-              rm -rf "$TARGET_DIR"
+              sudo rm -rf "$TARGET_DIR"
             else
               echo "Directory $TARGET_DIR does not exist."
             fi
