--- a/.github/workflows/node-js.yml
+++ b/.github/workflows/node-js.yml
@@ -63,16 +63,32 @@ jobs:
           ssh -i ssh_key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
             TARGET_DIR="$TOMCAT_WEBAPPS_PATH/QuaLISWeb"
             if [ -d "$TARGET_DIR" ]; then
-              echo "Directory $TARGET_DIR exists. Deleting it..."
-              rm -rf "$TARGET_DIR"
-              echo "Error in Removing the directory $TARGET_DIR "
+              echo "Directory $TARGET_DIR exists. Going to delete it..."
+              echo "Stopping Tomcat Service(1) ..."
+              sudo systemctl stop tomcat             
+              echo "Change directory to $TOMCAT_WEBAPPS_PATH..."
+              sudo cd $TOMCAT_WEBAPPS_PATH
+              echo "Current directory..."
+              pwd
+              echo "Removing Directory $TARGET_DIR ..."
+              sudo rm -rf "$TARGET_DIR"              
+               if [ -d "$TARGET_DIR" ]; then
+                echo "$TARGET_DIR exists and not removed....."
+                else
+                 echo "$TARGET_DIR does not exists..."
+                 echo "$TARGET_DIR removed successfully"
+                fi             
             else
               echo "Directory $TARGET_DIR does not exist."
+              echo "Stopping Tomcat Service(2) ........"
+              sudo systemctl stop tomcat              
             fi
-            echo "Creating new directory $TARGET_DIR..."
-            mkdir -p "$TARGET_DIR"
-            chmod -R 755 "$TARGET_DIR"
-            chown -R $EC2_USER:$EC2_USER "$TARGET_DIR"
+              echo "Creating new directory $TARGET_DIR..."
+              sudo mkdir -p "$TARGET_DIR"
+              echo "Executing chmod 777  command on $TARGET_DIR..."
+              sudo chmod -R 777 "$TARGET_DIR"
+              echo "Executing chown command on $TARGET_DIR..."
+              sudo chown -R $EC2_USER:$EC2_USER "$TARGET_DIR"
           EOF
 
       - name: Deploy React App to EC2 Tomcat
@@ -81,7 +97,7 @@ jobs:
           EC2_USER: ${{secrets.EC2_USERNAME}}
           TOMCAT_WEBAPPS_PATH: ${{secrets.TOMCAT_WEBAPPS_PATH}}
         run: |
-          rsync -avz --delete -e "ssh -i ssh_key.pem -o StrictHostKeyChecking=no" ./build/ $EC2_USER@$EC2_HOST:$TOMCAT_WEBAPPS_PATH/QuaLISWeb/
+          rsync -avz --delete -e "ssh -i ssh_key.pem -o StrictHostKeyChecking=no" ~/QuaLISWeb-Runner/actions-runner/QuaLISWeb-Work/QuaLISWeb/QuaLISWeb/build/ $EC2_USER@$EC2_HOST:$TOMCAT_WEBAPPS_PATH/QuaLISWeb/
 
       - name: Restart Tomcat on EC2
         env:
